<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Indic Browser</string>
    <string name="enter_url">Enter URL</string>
    <!-- Content Descriptions for Buttons -->
    <string name="back">Back</string> 
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_back">Back</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_new_tab">New Tab</string>
    <string name="action_tabs">Tabs</string>
    <string name="action_forward">Forward</string>
    <!-- Hints -->
    <string name="url_bar_hint">Search or enter address</string>
</resources> 